Prevent droplist horizontal overlap
Removes the 1em right border, effectively allowing the response content to be 16px closer to the question text, to prevent the droplists from floating over the border when the response is scrolled horizontally.

--- a/Survey/source/styles/formal/_t-question-base.scss
+++ b/Survey/source/styles/formal/_t-question-base.scss
@@ -50,8 +50,6 @@ html[dir="rtl"] .o-question-errorandinstruction {
 
 .sidebyside .o-question-information-and-messages,
 .sidebyside .o-question-information-messages {
-    box-sizing: border-box;
-    margin-right: 1em;
     padding-right: 1em;
     margin-bottom: 0;
     flex: 0 0 40%;
