--- a/Survey/styles/formal/base.css
+++ b/Survey/styles/formal/base.css
@@ -3179,9 +3179,6 @@ html[dir=rtl] .o-question-errorandinstruction {
 
 .sidebyside .o-question-information-and-messages,
 .sidebyside .o-question-information-messages {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  margin-right: 1em;
   padding-right: 1em;
   margin-bottom: 0;
   -webkit-box-flex: 0;
