--- a/Survey/styles/informal/base.css
+++ b/Survey/styles/informal/base.css
@@ -2923,9 +2923,6 @@ html[dir=rtl] .o-question-errorandinstruction {
 
 .sidebyside .o-question-information-and-messages,
 .sidebyside .o-question-information-messages {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  margin-right: 1em;
   padding-right: 1em;
   margin-bottom: 0;
   -webkit-box-flex: 0;
